--- a/database/src/main/resources/application.conf
+++ b/database/src/main/resources/application.conf
@@ -4,4 +4,13 @@ app {
 
 akka {
   loglevel = "WARNING"
+  actor {
+    default-dispatcher {
+      fork-join-executor {
+        parallelism-max=8
+        parallelism-min=8
+        parallelism-factor=8
+      }
+    }
+  }
 }
